Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10245

Problem with asynchronous reading from a mailslot

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Drivers: Other
    • VirtualBox, ReactOS (r69336)

    Description

      We (Linter) found another problem with reading from a mailslot.

      Steps to reproduce:

      1. Create a mailslot.

      hMailslotClient = CreateMailslot(LMS, 0L, MAILSLOT_WAIT_FOREVER, 
      (LPSECURITY_ATTRIBUTES) NULL);

      2. Attempt to read asynchronously (parameter lpOverlapped not NULL) from the slot

      ReadFile(hMailslotClient, lpszBuffer, LENMSG, &cbRead, &stOverlapped)

      3. Function ReadFile() must return value immediately (with code ERROR_IO_PENDING), but this does not happen

      Example available here:
      https://github.com/pechenkin/mailslotBug/blob/master/mailslotBug2.c

      Attachments

        Activity

          People

            Heis Spiter Pierre Schweitzer
            pechenkin nikita pechenkin
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: