[MSFS] Implement asynchronous reading from mailslot. Patch by Nikita Pechenkin

Adjustements, style fixing by myself.

CORE-10245 #resolve #comment Modified patch committed with r69475. I have tested kernel32:mailslot and your provided test, both are passing 100%. Thanks!

svn path=/trunk/; revision=69475